--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -7,33 +7,53 @@
     <meta name="author" content="Santiago Cellitti">
     <meta name="description" content="Empresa de telefonia movil que presenta una tecnologia innovadora que se diferencia de las demas compañias, presentando señal sateliteal directo a tu dispositivo sin importar la zona en la que estes.">
     <meta name="keywords" content="señal satelital, telefonia movil, movil, datos">
-    <link rel="icon" href="../ico/negro-verde.ico" >
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../ico/negro-verde.ico">
+    <!-- normalize -->
     <link rel="stylesheet" href="../css/normalize.css">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- styles -->
+    <link rel="stylesheet" href="../css/styles.css">
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
+    <!-- aos animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Ayuda | Overloaded Signal</title>
+    <!-- responsive -->
+    <link rel="stylesheet" href="../css/responsive.css">
+    <title>Ayuda | Us Signal</title>
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-            <img class="img-logo" src="../img/negro-verde.png" alt="logo de la empresa">
-            <a href="#"><h2 class="nombre-empresa">OVERLOADEDSIGNAL</h2></a>
-        </div>
-        <nav class="navegacion">  
-            <ul class="header-list">         
-                <li class="navlist"><a href="../index.html" class="navlink">INICIO</a></li>
-                <li class="navlist"><a href="planes-prepago.html" class="navlink">PLANES PREPAGO</a></li>
-                <li class="navlist"><a href="planes-factura.html" class="navlink">PLANES POSPAGO</a></li>
-                <li class="navlist"><a href="os-club.html" class="navlink">OS CLUB</a></li>
-                <li class="navlist"><a href="ayuda.html" class="navlink">AYUDA</a></li>
-            </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">US</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./planes-factura.html">PLANES POSPAGO</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./us-club.html">US CLUB</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="./ayuda.html">AYUDA</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
-        <a id="user" href="#" class="user-link"><img class="user" src="../img/kisspng-computer-icons-user-membership-vector-5b498fc79b8393.689490051531547591637.png" alt="user"></a>
     </header>
-
     <div class="preguntas-frecuentes">
         <h2 class="titulo-preguntas-frecuentes">PREGUNTAS FRECUENTES</h2>
     </div>
@@ -92,21 +112,24 @@
 
     <footer id="footer" class="footer">
         <div class="empresa-footer">
-            <h4>Overloaded Signal © 2022</h4>
+            <h4>Us Signal © 2022</h4>
         </div>
         <div class="terminos-footer">
             <ul class="footer-lista"> <!-- links no redireccionables -->
-                <li class="item-lista"><a href="#">Avisos legales | </a></li>
-                <li class="item-lista"><a href="#">Terminos y condiciones | </a></li>
-                <li class="item-lista"><a href="#">Centro de privacidad | </a></li>
-                <li class="item-lista"><a href="#">Trabaja con nosotros | </a></li>
+                <li class="item-lista"><a href="#">Avisos legales</a></li>
+                <li class="item-lista"><a href="#">Terminos y condiciones</a></li>
+                <li class="item-lista"><a href="#">Centro de privacidad</a></li>
+                <li class="item-lista"><a href="#">Trabaja con nosotros</a></li>
                 <li class="item-lista"><a href="#">Todos los derechos reservados para Cellitti Santiago © 2022</a></li>
             </ul>
         </div>
     </footer>
+    <!-- aos animation -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+    <!-- boostrap javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
