--- a/pages/planes-factura.html
+++ b/pages/planes-factura.html
@@ -7,91 +7,152 @@
     <meta name="author" content="Santiago Cellitti">
     <meta name="description" content="Empresa de telefonia movil que presenta una tecnologia innovadora que se diferencia de las demas compañias, presentando señal sateliteal directo a tu dispositivo sin importar la zona en la que estes.">
     <meta name="keywords" content="señal satelital, telefonia movil, movil, datos">
-    <link rel="icon" href="../ico/negro-verde.ico" >
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../ico/negro-verde.ico">
+    <!-- normalize -->
     <link rel="stylesheet" href="../css/normalize.css">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- styles -->
+    <link rel="stylesheet" href="../css/styles.css">
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
+    <!-- aos animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Planes Pospago | Overloaded Signal</title>
+    <!-- responsive -->
+    <link rel="stylesheet" href="../css/responsive.css">
+    <title>Planes Pospago | Up Signal</title>
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-            <img class="img-logo" src="../img/negro-verde.png" alt="logo de la empresa">
-            <a href="#"><h2 class="nombre-empresa">OVERLOADEDSIGNAL</h2></a>
-        </div>
-        <nav class="navegacion"> 
-            <ul class="header-list">  
-                <li class="navlist"><a href="../index.html" class="navlink">INICIO</a></li>
-                <li class="navlist"><a href="planes-prepago.html" class="navlink">PLANES PREPAGO</a></li>
-                <li class="navlist"><a href="planes-factura.html" class="navlink">PLANES POSPAGO</a></li>
-                <li class="navlist"><a href="os-club.html" class="navlink">OS CLUB</a></li>
-                <li class="navlist"><a href="ayuda.html" class="navlink">AYUDA</a></li>
-            </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">US</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="./planes-factura.html">PLANES POSPAGO</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./us-club.html">US CLUB</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./ayuda.html">AYUDA</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
-        <a href="#" class="user-link"><img class="user" src="../img/kisspng-computer-icons-user-membership-vector-5b498fc79b8393.689490051531547591637.png" alt="user"></a>
     </header>
-
     <div class="menu-combos-pospago">
         <h2 class="titulo-menu-combos-pospago">ASEGURATE DE ESTAR SIEMPRE CONECTADO CON NUESTROS PLANES POSPAGO</h2>
         <p class="descripcion-menu-combos-pospago">Con la contratacion de uno de nuestros planes Pospago, tenes acceso a <a class="link-parrafo" href="#redirection">OS Club</a>.</p>
-        <p class="descripcion-menu-combos-pospago">Todos los combos son x 30 dias, y con la compra de cualquiera tenes WhatsApp  y Spotify gratis!</p>
+        <p class="descripcion-menu-combos-pospago">Además vas a contar con acceso ilimitado aplicaciones sin que consuman datos!</p>
     </div>
     <div class="combos-pospago">
-        <div class="combo-pospago">
-            <h3 class="titulo-combo-pospago">BRONCE</h3>
-            <p class="precio-combo-pospago">$899</p>
-            <ul class="lista-combo-pospago">
-                <li class="item-lista-combo-pospago"><span class="span-lista-pospago">10 Gigas</span> para que navegues por internet</li>
-                <li class="item-lista-combo-pospago"><span class="span-lista-pospago">200 Minutos</span> para llamadas a cualquier compañia</li>
-                <li class="item-lista-combo-pospago"><span class="span-lista-pospago">200 Mensajes</span> para cualquier compañia</li>
-            </ul>
-            <button class="boton-pospago">COMPRAR</button>
+        <div class="combo-pospago combo-pospago1">
+            <div class="contenedor-titulo-pospago">
+                <h3 class="titulo-combo-pospago">BASICO</h3>
+            </div>
+            <div class="contenedor-precio-pospago">
+                <p class="precio-combo-pospago">$1.900</p>
+            </div>
+            <div class="contenedor-logos-app">
+                <img src="../img/whatsapp-logo.png" alt="whatsapp">
+            </div>
+            <div class="contenedor-lista-pospago">
+                <ul class="lista-combo-pospago">
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">WhatsApp</span> GRATIS</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">10 Gigas</span> para que navegues por internet</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">200 Minutos</span> para llamadas a cualquier compañia</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">200 SMS</span> para cualquier compañia</li>
+                </ul>
+            </div>
+            <div class="contenedor-boton-pospago">
+                <button class="boton-pospago">CONTRATAR</button>
+            </div>
         </div>
-        <div class="combo-pospago">
-            <h3 class="titulo-combo-pospago">PLATA</h3>
-            <p class="precio-combo-pospago">$1.199</p>
-            <ul class="lista-combo-pospago">
-                <li class="item-lista-combo-pospago"><span class="span-lista-pospago">15 Gigas</span> para que navegues por internet</li>
-                <li class="item-lista-combo-pospago"><span class="span-lista-pospago">300 Minutos</span> para llamadas a cualquier compañia</li>
-                <li class="item-lista-combo-pospago"><span class="span-lista-pospago">300 Mensajes</span> para cualquier compañia</li>
-            </ul>
-            <button class="boton-pospago">COMPRAR</button>
+        <div class="combo-pospago combo-pospago2">
+            <div class="contenedor-titulo-pospago">
+                <h3 class="titulo-combo-pospago">PROFESIONAL</h3>
+            </div>
+            <div class="contenedor-precio-pospago">
+                <p class="precio-combo-pospago">$2.400</p>
+            </div>
+            <div class="contenedor-logos-app">
+                <img src="../img/whatsapp-logo.png" alt="whatsapp">
+                <img class="img2" src="../img/tiktoki-logo.png" alt="tiktok">
+            </div>
+            <div class="contenedor-lista-pospago">
+                <ul class="lista-combo-pospago">
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">WhatsApp y Tik Tok</span> GRATIS</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">15 Gigas</span> para que navegues por internet</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">300 Minutos</span> para llamadas a cualquier compañia</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">300 SMS</span> para cualquier compañia</li>
+                </ul>
+            </div>
+            <div class="contenedor-boton-pospago">
+                <button class="boton-pospago">CONTRATAR</button>
+            </div>
         </div>
-        <div class="combo-pospago">
-            <h3 class="titulo-combo-pospago">ORO</h3>
-            <p class="precio-combo-pospago">$1.499</p>
-            <ul class="lista-combo-pospago">
-                <li class="item-lista-combo-pospago"><span class="span-lista-pospago">20 Gigas</span> para que navegues por internet</li>
-                <li class="item-lista-combo-pospago"><span class="span-lista-pospago">500 Minutos</span> para llamadas a cualquier compañia</li>
-                <li class="item-lista-combo-pospago"><span class="span-lista-pospago">500 Mensajes</span> para cualquier compañia</li>
-            </ul>
-            <button class="boton-pospago">COMPRAR</button>
+        <div class="combo-pospago combo-pospago3">
+            <div class="contenedor-titulo-pospago">
+                <h3 class="titulo-combo-pospago">EMPRESARIAL</h3>
+            </div>
+            <div class="contenedor-precio-pospago">
+                <p class="precio-combo-pospago">$3.500</p>
+            </div>
+            <div class="contenedor-logos-app">
+                <img src="../img/whatsapp-logo.png" alt="whatsapp">
+                <img class="img2" src="../img/tiktoki-logo.png" alt="tiktok">
+                <img class="img3" src="../img/spotify-logo.png" alt="spotify">
+            </div>
+            <div class="contenedor-lista-pospago">
+                <ul class="lista-combo-pospago">
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">WhatsApp, Tik Tok y Spotify</span> GRATIS</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">30 Gigas</span> para que navegues por internet</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">500 Minutos</span> para llamadas a cualquier compañia</li>
+                    <li class="item-lista-combo-pospago"><span class="span-lista-pospago">500 SMS</span> para cualquier compañia</li>
+                </ul>
+            </div>
+            <div class="contenedor-boton-pospago">
+                <button class="boton-pospago">CONTRATAR</button>
+            </div>
         </div>
     </div>
-    <div class="menu-combos-pospago">
-        <p class="descripcion-menu-combos-pospago">Si ya tenes contratado uno de nuestros Planes, podes conocer todos los beneficios que tenemos para vos haciendo click <a class="link-parrafo" id="redirection" href="../pages/os-club.html">acá</a>.</p>
+    <div class="menu-combos-pospago2">
+        <p class="descripcion-menu-combos-pospago2">Si ya tenes contratado uno de nuestros Planes, podes conocer todos los beneficios que tenemos para vos haciendo click <a class="link-parrafo2" id="redirection" href="../pages/os-club.html">acá</a>.</p>
     </div>
-    
     <footer id="footer" class="footer">
         <div class="empresa-footer">
-            <h4>Overloaded Signal © 2022</h4>
+            <h4>Up Signal © 2022</h4>
         </div>
         <div class="terminos-footer">
             <ul class="footer-lista"> <!-- links no redireccionables -->
-                <li class="item-lista"><a href="#">Avisos legales | </a></li>
-                <li class="item-lista"><a href="#">Terminos y condiciones | </a></li>
-                <li class="item-lista"><a href="#">Centro de privacidad | </a></li>
-                <li class="item-lista"><a href="#">Trabaja con nosotros | </a></li>
+                <li class="item-lista"><a href="#">Avisos legales</a></li>
+                <li class="item-lista"><a href="#">Terminos y condiciones</a></li>
+                <li class="item-lista"><a href="#">Centro de privacidad</a></li>
+                <li class="item-lista"><a href="#">Trabaja con nosotros</a></li>
                 <li class="item-lista"><a href="#">Todos los derechos reservados para Cellitti Santiago © 2022</a></li>
             </ul>
         </div>
     </footer>
+    <!-- aos animation -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+    <!-- boostrap javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
